fixes header weirdness z-index and fixed position

--- a/src/Styles/HeaderStyles.css
+++ b/src/Styles/HeaderStyles.css
@@ -6,6 +6,10 @@
   z-index: 1;
 }
 
+#headerEmptyBlock{
+  height: 60px;
+}
+
 #title {
   margin: 0 auto;
   width: 400px;
